# cc-tips

./: .gitignore  compose.yaml
backend/: Cargo.toml  fly.toml
backend/src/: calculations.rs  main.rs
backend/src/calculations/: compute.rs  generate.rs  transform.rs
backend/src/routes/: calculations.rs  commissions.rs  mod.rs  staff.rs  tips.rs  wines.rs
frontend/: package-lock.json  package.json
frontend/src/: ambient.d.ts  types.ts
frontend/src/lib/: Header.svelte  SideNav.svelte  index.ts  stores.ts  types.d.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  CalculatorUploadForm.svelte  SummaryCard.svelte  TipsTable.svelte  schema.ts
frontend/src/routes/cards/: +page.server.ts  +page.svelte  DateRangePicker.svelte  ImportStaffForm.svelte  SelectIndicator.svelte  StaffMemberForm.svelte  StaffTable.svelte  SummaryCards.svelte  TabSummary.svelte  TipsSummary.svelte  data-table-actions.svelte  importSchema.ts  memberDetailSchema.ts  registerSchema.ts  schema.ts
frontend/src/routes/commissions/: +page.server.ts  +page.svelte  CommissionsForm.svelte  CommissionsSummary.svelte  CommissionsTable.svelte  commissionsSchema.ts  data-table-actions.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/tips/: +page.server.ts  +page.svelte  data-table-actions.svelte  data-table.svelte  schema.ts
frontend/src/routes/tips/[eid]/: +page.server.ts  +page.svelte  SummaryCard.svelte  data-table-actions.svelte  data-table.svelte
