[package]
name = "wine-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.2", features = ["fs", "limit", "trace"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
surrealdb = "1.4.2"
futures = "0.3.30"
once_cell = "1.19.0"
csv = "1.3.0"
tower = "0.4.13"
serde_with = { version = "3.8.1", features = ["chrono"] }
polars = { version = "0.40", features = [
  "lazy",
  "round_series",
  "is_in",
  "regex",
  "dtype-struct",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
